src/objects/ZZWorkflowModel__c.object
<CustomObject>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Kick_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically kick off the workflow</inlineHelpText>
        <label>Auto Kick Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Kick_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Kick Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Frequency__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Monitoring Frequency</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>Type and name of the parameter</description>
        <inlineHelpText>separated by &apos;,&apos;, eg, &apos;String name&apos;</inlineHelpText>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Phase</label>
        <referenceTo>ZZPhaseModel__c</referenceTo>
        <relationshipLabel>ZZWorkflowModels</relationshipLabel>
        <relationshipName>ZZWorkflowModels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZWorkflowModel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZZWorkflowModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZWorkflowModels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>